[gd_scene load_steps=6 format=3 uid="uid://ikp4uj7pv40o"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_yaq4k"]
[ext_resource type="Script" path="res://scripts/mob_spawner.gd" id="2_etpqa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1a88o"]
size = Vector2(92, 92)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_hoy7l"]

[sub_resource type="Curve2D" id="Curve2D_ml8n3"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -576, -324, 0, 0, 0, 0, 576, -324, 0, 0, 0, 0, 576, 324, 0, 0, 0, 0, -576, 324, 0, 0, 0, 0, -576, -324)
}
point_count = 5

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_yaq4k")

[node name="Collder" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1a88o")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(92, 92)
texture = SubResource("PlaceholderTexture2D_hoy7l")

[node name="Camera" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="MobSpawner" type="Path2D" parent="Camera"]
curve = SubResource("Curve2D_ml8n3")
script = ExtResource("2_etpqa")

[node name="SpawnLocation" type="PathFollow2D" parent="Camera/MobSpawner"]
position = Vector2(-576, -324)

[node name="SpawnTimer" type="Timer" parent="Camera/MobSpawner"]
wait_time = 5.0
autostart = true

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -70.0
offset_top = -88.0
offset_right = 70.0
offset_bottom = -61.0
value = 100.0

[connection signal="timeout" from="Camera/MobSpawner/SpawnTimer" to="Camera/MobSpawner" method="_on_spawn_timer_timeout"]
